# ChangeLog for dev-libs/liblist
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/liblist/ChangeLog,v 1.4 2010/06/19 16:37:01 nerdboy Exp $

*liblist-2.3.1 (19 Jun 2010)

  19 Jun 2010; Steve Arnold <nerdboy@gentoo.org> +liblist-2.3.1.ebuild:
  Updated to new 'binki-version' who is now the upstream maintainer (yay).

  03 Jan 2010; Steve Arnold <nerdboy@gentoo.org> liblist-2.1-r1.ebuild,
  files/liblist-2.1-sharedlib.patch:
  Updated patch and converted to EAPI2.

*liblist-2.1-r1 (05 Dec 2009)

  05 Dec 2009; Steve Arnold <nerdboy@gentoo.org> +liblist-2.1-r1.ebuild,
  +files/liblist-2.1-sharedlib.patch:
  Lemony-fresh rev-bump, now with shared library support. Closes bug #294788.
  Manifest issue also fixed (closes bug #294785).

*liblist-2.1 (20 Apr 2009)

  20 Apr 2009; Steve Arnold <nerdboy@gentoo.org> +metadata.xml,
  +liblist-2.1.ebuild:
  New ebuild for a generic list library, a required dependency for ferret.
  Updated source code hosted by me (no upstream URL anymore).  Comes with
  a nice technical paper and example routines.
